Fixed the update mechanism. tested this time.  Please enter the commit message for your changes. Lines starting